# otp-messenger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: DEVELOPER_GUIDE.md  UI_UPDATE_GUIDE.md  USER_GUIDE.md
resources/: resources.qrc
src/: authentication.cpp  authentication.h  codebook.cpp  codebook.h  cryptoengine.cpp  cryptoengine.h  cypherbook.cpp  cypherbook.h  encryption_wrapper.cpp  encryption_wrapper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message_protocol.cpp  message_protocol.h  messageprotocol.cpp  messageprotocol.h  pad_demo.cpp  pad_file_manager.cpp  pad_file_manager.h  secure_memory.cpp  secure_memory.h  secure_wiper.cpp  secure_wiper.h
